--- a/FirstClass.ipynb
+++ b/FirstClass.ipynb
@@ -425,11 +425,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sound is:  meow!\n",
+      "1. self.sound is:  default\n",
+      "2. self.sound is:  meow!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Animal at 0x1e63358f7b8>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Animal():\n",
     "    \n",
@@ -449,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -693,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
