--- a/Lab10_exercises.ipynb
+++ b/Lab10_exercises.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -89,18 +89,26 @@
     "word='''Here is some \n",
     "some\n",
     "stuff\n",
-    "in\n",
+    "in~\n",
     "a file\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is some somestuffin~a file"
+     ]
+    }
+   ],
    "source": [
     "for letter in word:\n",
     "    print(letter.strip('\\n'),end='')"
@@ -108,44 +116,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is some \n",
+      "some\n",
+      "stuff\n",
+      "in~\n",
+      "a file"
+     ]
+    }
+   ],
    "source": [
     "print(word.strip('\\n'),end='')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is some \n",
+      "some\n",
+      "stuff\n",
+      "in~\n",
+      "a file"
+     ]
+    }
+   ],
    "source": [
     "print(word.strip(),end='')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is some \n",
+      "some\n",
+      "stuff\n",
+      "in~\n",
+      "a file\n"
+     ]
+    }
+   ],
    "source": [
     "print(word.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hereissomesomestuffin~afile"
+     ]
+    }
+   ],
    "source": [
     "for letter in word:\n",
     "    print(letter.strip(),end='')"
@@ -208,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
