--- a/Revison7.ipynb
+++ b/Revison7.ipynb
@@ -418,6 +418,265 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1,2,3,4,5,6]\n",
+    "\n",
+    "for i in numbers:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k\n",
+      "e\n",
+      "v\n",
+      "i\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_string = \"kevin\"\n",
+    "\n",
+    "for char in a_string:\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thisisamultilinestring"
+     ]
+    }
+   ],
+   "source": [
+    "multi = '''\n",
+    "\n",
+    "this is \n",
+    "a multi line\n",
+    "string \n",
+    "\n",
+    "'''\n",
+    "\n",
+    "for char in multi.strip().replace(\"\\n\",\"\"):\n",
+    "    if char not in \" \":\n",
+    "        print(char, end = \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "he-ll-o\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"-\".join([\"he\",\"ll\",\"o\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-3-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"-\".join([\"1\",\"2\",\"3\",\"4\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(12, 'wer', 12, 'wer'), (13, 'qwe', 13, 'qwe'), (14, 'tyu', 14, 'tyu')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def double(n):\n",
+    "    return n * 2\n",
+    "\n",
+    "a_dict = {12:\"wer\",13:\"qwe\",14:\"tyu\"}\n",
+    "\n",
+    "list(map(double, a_dict.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cat << EOF > file.dat\n",
+    "1,2,3\n",
+    "4,5,6\n",
+    "7,8,9\n",
+    "EOF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['7', ',', '8', ',', '9', ',', '6', ',', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "tup_list = []\n",
+    "with open(\"file.dat\") as f:\n",
+    "    for item in f.read().split(\"\\n\"):\n",
+    "        if item not in \",\":\n",
+    "            tup_list[:3] = (item)\n",
+    "            count += 1\n",
+    "print(tup_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.020000000000000004"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 * 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.1 * 0.2 == 0.02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ternary\n",
+    "\n",
+    "a = 3\n",
+    "b= 1\n",
+    "a if a > b else b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -442,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
